--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Push Docker image
         run: |
-          docker tag poliperritos ${{ secrets.DOCKER_HUB_USERNAME }}/poliperritos:${{ github.sha }} .
-          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/poliperritos:${{ github.sha }} .
+          docker tag poliperritos ${{ secrets.DOCKER_HUB_USERNAME }}/poliperritos:${{ github.sha }}
+          docker push ${{ secrets.DOCKER_HUB_USERNAME }}/poliperritos:${{ github.sha }}
           
   deploy-to-azure:
     needs: build-and-push-docker
