--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,20 @@
 # vehiculo_service/docker/Dockerfile
-FROM python:3.9
+FROM python:3.9-bullseye
 
-# Instalamos paquetes del sistema necesarios para SQL Server ODBC
-RUN apt-get update && apt-get install -y \
-    gcc \
-    g++ \
+# Instala dependencias del sistema para ODBC y SQL Server
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+    unixodbc \
     unixodbc-dev \
-    curl \
-    && rm -rf /var/lib/apt/lists/*
-
-# Descargamos e instalamos el driver ODBC 18 para SQL Server
-RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
+    g++ \
+    curl && \
+    curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
     curl https://packages.microsoft.com/config/debian/11/prod.list > /etc/apt/sources.list.d/mssql-release.list && \
-    apt-get update && ACCEPT_EULA=Y apt-get install -y \
-    msodbcsql18 \
-    && rm -rf /var/lib/apt/lists/*
+    apt-get update && \
+    ACCEPT_EULA=Y apt-get install -y --no-install-recommends msodbcsql18 && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
+
 
 WORKDIR /app
 
